# keeping-your-intelligence-local

./: .bashrc  .env.docker  .gitattributes  Dockerfile  README.md  agent.sh  app.py  bootstrap.sh  cats.base64  cats.js  cats.sh  code-example.sh  code.sh  connect.sh  docker-compose.yml  embed.sh  function-calling.js  function-calling.json  function-calling.sh  inspect.js  inspect.sh  load-model.sh  ollama.yml  package-lock.json  package.json  rag-example.sh  rag.sh  structured-request.json  structured.js  structured.sh  technical-documentation.md  test.sh  utils.js  whoami.yml
.cursor/: mcp.json
collections/: README.md
collections/Ollama/: Code Example.bru  Delete a Model.bru  Embed.bru  Generate - Vision Example.bru  Generate Example - Non-Streaming.bru  Generate Example - llama3.2-1b.bru  Generate Example - llama3.3.bru  List Local Models.bru  List Models.bru  List Running Models.bru  Load a Model.bru  (+3 more)
diagrams/: agentic-agents.drawio  agentic-workflows.drawio  basic-llm.drawio  cag.drawio  high-level-models.drawio  rag.drawio  rag.drawio-large.drawio  service-llm.drawio
examples/: docker-compose.yml  rag.py  requirements.txt
models/: evilops.Modelfile
node/: mario.js  package-lock.json  package.json  prompt.js
prompts/: explain.prompt  review.prompt
resources/: cats.base64
src/: cats.js  code.js  embed.js  function-calling.js  inspect.js  load-model.js  structured.js  test.js  utils.js
strands/: .env.example  README.md  agent.py  friends.md  hubitat.py  hubitat_mcp.py  open_agent.py  pyproject.toml  requirements.txt  spotify.py  tts_example.py
(+1 files in other folders)
